# ollama_skills

./: .gitignore  README.md  gradio_app.py  main.py  pyproject.toml  simple_test.py  skill_loader.py
