[project]
name = "langgraph-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.2.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.8",
    "pypdf>=6.5.0",
]
